src/test/ui/borrowck/issue-58776-borrowck-scans-children.ast.stderr
error[E0597]: `**greeting` does not live long enough
  --> $DIR/issue-58776-borrowck-scans-children.rs:10:24
   |
LL |     let res = (|| (|| &greeting)())();
   |                    --  ^^^^^^^^     - borrowed value only lives until here
   |                    |   |
   |                    |   borrowed value does not live long enough
   |                    capture occurs here
...
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
